--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+html, body {
+  width: 100%;
+  height: 100%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +15,45 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+h1 {
+  font-size: 1.25em;
+  font-weight: 300;
+  text-align: left;
+  margin-bottom: 0;
+}
+
+.header {
+  top: 0;
+  margin-bottom: 1rem;
+  box-shadow: 0 0 12px rgba(0, 0, 0, 0.14);
+  padding: 1.2rem 0.75rem;
+  position: sticky;
+  background: white;
+}
+
+ul.buttons {
+  list-style: none;
+  padding: 0 0.5rem 1rem;
+}
+
+ul.buttons li {
+  padding: 0.5rem 1rem;
+}
+
+a.button-ar {
+  border: 1px solid rgba(0, 0, 0, 0.18);
+  display: block;
+  border-radius: 4px;
+  transition: all 0.6s linear;
+}
+
+a.button-ar:hover {
+  border-color: #8b60d1;
+  box-shadow: 0 4px 12px rgba(139, 96, 209, 0.3);
+}
+
+.button-ar img {
+  max-width: 100%;
 }
