--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 html, body {
   width: 100%;
   height: 100%;
+  background: #000000;
+  color: white;
 }
 
 body {
@@ -26,16 +28,20 @@ h1 {
 
 .header {
   top: 0;
-  margin-bottom: 1rem;
-  box-shadow: 0 0 12px rgba(0, 0, 0, 0.14);
+  margin-bottom: 2rem;
+  border-bottom: 0.5px solid rgba(133, 71, 231, 0.28);
   padding: 1.2rem 0.75rem;
   position: sticky;
-  background: white;
+  background: #0f080f;
+}
+
+.instruction p {
+  color: rgba(255, 255, 255, 0.48);
 }
 
 ul.buttons {
   list-style: none;
-  padding: 0 0.5rem 1rem;
+  padding: 0.5rem 0.5rem 1rem;
 }
 
 ul.buttons li {
@@ -43,10 +49,12 @@ ul.buttons li {
 }
 
 a.button-ar {
-  border: 1px solid rgba(0, 0, 0, 0.18);
+  border: 1px solid #222222;
   display: block;
   border-radius: 4px;
   transition: all 0.6s linear;
+  background: rgba(255, 255, 255, 0.05) center center no-repeat;
+  background-size: 100% auto;
 }
 
 a.button-ar:hover {
@@ -56,4 +64,13 @@ a.button-ar:hover {
 
 .button-ar img {
   max-width: 100%;
+  visibility: hidden;
+}
+
+#button-ar-tshirt {
+  background-image: url("./assets/images/tshirt.png");
+}
+
+#button-ar-card {
+  background-image: url("./assets/images/card.png");
 }
